applications/docs-bug/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: docs-bug
  name: docs-bug
