applications/docs-bug/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-bug-service
  namespace: docs-bug
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: docs-bug
  type: ClusterIP
