applications/docs-bug/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: docs-bug-ingress
  namespace: docs-bug
spec:
  tls:
    - hosts:
        - docs-bug.openeuler.sh
      secretName: docs-bug-cert-secrets
  rules:
    - host: docs-bug.openeuler.sh
      http:
        paths:
          - backend:
              serviceName: docs-bug-service
              servicePort: 80
            path: /
